--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,25 +1,42 @@
-<div class="wrapper">
-    <div id="formContent">
-    <h2>Sign In</h2>
-      <form [formGroup]="loginForm" (ngSubmit)="loginUser()" class="form-group p-4" >
-        <div class="form-group mt-2">
-          <input type="text" formControlName="username"  [ngClass]="{ 'is-invalid': submitted && f.username.errors }" class="form-control" required="required" placeholder="Username" />
-          <div *ngIf="submitted && f.username.errors" class="invalid-feedback" style="text-align: left;">
-            <div *ngIf="f.username.errors.required">Username is required</div>
-            <div *ngIf="f.username.errors.pattern">Username is Invalid.</div>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-5 mx-auto">
+      <div id="first">
+        <div class="myform form ">
+          <div class="logo mb-3">
+            <div class="col-md-12 text-center">
+              <h1>Login</h1>
+            </div>
           </div>
+          <form [formGroup]="loginForm" (ngSubmit)="loginUser()" class="form-group p-4">
+            <div class="form-group mt-2">
+              <input type="text" formControlName="username" [ngClass]="{ 'is-invalid': submitted && f.username.errors }"
+                class="form-control" required="required" placeholder="Username" />
+              <div *ngIf="submitted && f.username.errors" class="invalid-feedback" style="text-align: left;">
+                <div *ngIf="f.username.errors.required">Username is required</div>
+                <div *ngIf="f.username.errors.pattern">Username is Invalid.</div>
+              </div>
+            </div>
+            <div class="form-group mt-2">
+              <input type="password" formControlName="password"
+                [ngClass]="{ 'is-invalid': submitted && f.password.errors }" class="form-control" required="required"
+                placeholder="Password" />
+              <div *ngIf="submitted && f.password.errors" class="invalid-feedback" style="text-align: left;">
+                <div *ngIf="f.password.errors.required">Password is required</div>
+                <div *ngIf="f.password.errors.pattern">Password is Invalid.</div>
+              </div>
+            </div>
+
+            <div class="col-md-12 text-center ">
+              <button type="submit" class=" btn btn-block mybtn btn-primary tx-tfm">Login</button>
+            </div>
+
+            <div class="form-group mt-1">
+              <p class="text-center">Don't have account? <a routerLink="/register">Sign up here</a></p>
+            </div>
+          </form>
         </div>
-        <div class="form-group mt-2">
-          <input type="password" formControlName="password"  [ngClass]="{ 'is-invalid': submitted && f.password.errors }" class="form-control" required="required" placeholder="Password" />
-          <div *ngIf="submitted && f.password.errors" class="invalid-feedback" style="text-align: left;">
-            <div *ngIf="f.password.errors.required">Password is required</div>
-            <div *ngIf="f.password.errors.pattern">Password is Invalid.</div>
-          </div>
-        </div>
-        <button type="submit" class="form-control btn btn-outline-primary ">LogIn!</button>
-      </form>
-      <div id="formFooter">
-        <a class="underlineHover" routerLink="/register">Don't have an account?</a>
       </div>
     </div>
-  </div> 
+  </div>
+</div>
