--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar *ngIf="this._authService.isLoggedIn()" color="dark" class="navbar">
-    <div>Parth Agravat - 19SOECE13031</div>
+    <div>Ruturajsinh Gohil - 19SOEIT13007</div>
     <div>
         <a routerLink="/videos">Video's</a>
         <a *ngIf="this._authService.isLoggedIn()" (click)="logout()" class="btn btn-danger ml-2"><i
